--- a/views/posts/view.erb
+++ b/views/posts/view.erb
@@ -1,4 +1,5 @@
-<h1><%= @post.title %></h1>
-<p><%= @post.body %></p>
+<h1><%=h @post.title %></h1>
+<p><%=h @post.body %></p>
 <br>
-<a href="/posts/<%= @post.id %>/edit">Edit Post</a>
+<a href="/posts/<%= @post.id %>/edit">Edit Post</a><br>
+<a href="/posts/<%= @post.id %>/delete">Remove Post</a>
